--- a/index.html
+++ b/index.html
@@ -4,23 +4,20 @@
     <meta charset="utf-8">
     <title>Street View Side-By-Side</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   </head>
   <body>
-    <script>
-      const add = (x,y) => {
-        if(!x || !y) return "";       
-        x = parseInt(x);
-        y = parseInt(y);
-        if(x+y < 10){
-          return "10より小さい";      
-        }
-        return "10より大きい"
-      }
-    </script>
-    
-    <form oninput="result.value = add(hoge.value,fuga.value)">
+    <script type="text/javascript" src="index.js"></script>
+    <h2>GoogleDriveの共有URLを入れてね！</h2>
+    <div id="area1">
+      <input type="text" id="googleUrl" name="googleUrl" class="font-main" />
+      <br><br>
+      <button type="button" id="btn1" onclick="OnButtonClick(googleUrl.value);">埋め込みURL作成</button>
+    </div>
+    <div id="output"></div>
+    <!-- <form oninput="result.value = add(hoge.value,fuga.value)">
       <input type="number" name="hoge"> + <input type="number" name="fuga">
       = <output name="result">
-    </form>
+    </form> -->
   </body>
 </html>
