googleDriveURL変換ツールを作ってみた！

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <div id="area1">
       <input type="text" id="googleUrl" name="googleUrl" class="font-main" />
       <br><br>
-      <button type="button" id="btn1" onclick="OnButtonClick(googleUrl.value);">埋め込みURL作成</button>
+      <button class="btn btn--orange btn--radius" type="button" id="btn1" onclick="OnButtonClick(googleUrl.value);">埋め込みURL作成</button>
     </div>
+    <br><br>
     <div id="output"></div>
     <!-- <form oninput="result.value = add(hoge.value,fuga.value)">
       <input type="number" name="hoge"> + <input type="number" name="fuga">
