--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <br><br>
     <div id="output"></div>
+    <div id="outputmozi"></div>
     <!-- <form oninput="result.value = add(hoge.value,fuga.value)">
       <input type="number" name="hoge"> + <input type="number" name="fuga">
       = <output name="result">
