--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>Street View Side-By-Side</title>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script> -->
   </head>
   <body>
     <script type="text/javascript" src="index.js"></script>
@@ -21,5 +23,8 @@
       <input type="number" name="hoge"> + <input type="number" name="fuga">
       = <output name="result">
     </form> -->
+    <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://doc-00-24-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/ndu12d1csbrt0ena9a51cdq41bjnrbb3/1620402225000/07878243188178220479/*/1ZQoIk6oKCE7ArVanzeze2RalLSWCYZcg" data-iframely-url="//cdn.iframe.ly/s74ZrVI"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LJAoRCfv4AQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <!-- <script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script> -->
   </body>
 </html>
