--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
     <br><br>
     <div id="output"></div>
     <div id="outputmozi"></div>
-    <!-- <form oninput="result.value = add(hoge.value,fuga.value)">
-      <input type="number" name="hoge"> + <input type="number" name="fuga">
-      = <output name="result">
-    </form> -->
+    <iframe width="560" height="315" src="./music_player/music_player.html"></iframe>
+    <!-- local上だと表示されない -->
     <div class="iframely-embed">
       <div class="iframely-responsive" style="height: 140px; padding-bottom: 0;">
         <a href="https://doc-0s-24-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/lenvqdrkke59pckbkifbllu6prhb2j1o/1620312075000/07878243188178220479/*/1hKlZh7-v0wLlJU59jiPbYDbWOQu3SkwA" data-iframely-url="//cdn.iframe.ly/0lCuwOk"></a>
