仮icon設定/リファクタリング

--- a/music_player/music_player.html
+++ b/music_player/music_player.html
@@ -12,7 +12,7 @@
    	<!-- Audio Player HTML -->
     <div class="audio-player">
       <h1>Demo - Preview Song</h1>
-      <img width="400" height="140" class="cover" src="img/cover.png" alt="">
+      <img width="120" height="120" class="cover" src="img/cast-icon.png" alt="">
       <audio id="audio-player" src="demo.mp3" type="audio/mp3" controls="controls"></audio>
     </div>
 
