--- a/index.html
+++ b/index.html
@@ -19,14 +19,6 @@
     <br><br>
     <div id="output"></div>
     <div id="outputmozi"></div>
-    <iframe width="560" height="315" src="./music_player/music_player.html"></iframe>
-    <!-- local上だと表示されない -->
-    <div class="iframely-embed">
-      <div class="iframely-responsive" style="height: 140px; padding-bottom: 0;">
-        <a href="https://doc-0s-24-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/lenvqdrkke59pckbkifbllu6prhb2j1o/1620312075000/07878243188178220479/*/1hKlZh7-v0wLlJU59jiPbYDbWOQu3SkwA" data-iframely-url="//cdn.iframe.ly/0lCuwOk"></a>
-      </div>
-    </div>
-    <script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/LJAoRCfv4AQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://kogepan159.github.io/google-drive-voice-html-generator/music_player/music_player.html"></iframe>
   </body>
 </html>
