URLパラメータをタイトルに表示

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <br><br>
     <div id="output"></div>
     <div id="outputmozi"></div>
-    <iframe width="560" height="315" src="https://kogepan159.github.io/google-drive-voice-html-generator/music_player/music_player.html"></iframe>
+    <iframe width="560" height="315" src="./music_player/music_player.html?name=1111"></iframe>
+    <!-- <iframe width="560" height="315" src="https://kogepan159.github.io/google-drive-voice-html-generator/music_player/music_player.html"></iframe> -->
   </body>
 </html>
