コピーボタン完成

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
     <br><br>
     <div id="output"></div>
     <div id="outputmozi"></div>
-    <h2>埋め込み情報</h2>
-    <textarea type="text" id="embedded" name="embedded"></textarea>
+    <div class="copy-div">埋め込み情報</div>
+    <button onclick="copyToClipboard()">Copy text</button>
+    <br>
+    <textarea type="text" id="embedded" name="embedded" readonly></textarea>
     <h2>表示サンプル</h2>
     <iframe width="560" height="160" src="./music_player/music_player.html?title=4月カレンダー紹介&urlId=1LTKWrt0zobBvEghY3uz0E8HPVobVhDE9&imageId=1REN-gL-e2q3zyjnRej3zKvLM-fFoNHZn"></iframe>
 
